--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -154,6 +157,113 @@
 
     </div>
 </section>
+
+<section class="about">
+    <div class="container">
+        <div class="about__wrapper">
+            <div class="about__photo">
+            <img src="img/Marshmello.jpeg" alt="photo">
+            </div>
+            <div class="about__descr">
+                <h2 class="title title_fz16 about__title">Про меня</h2>
+                <div class="title title_fz36 about__subtitle">Меня зовут Саиб</div>
+                <div class="divider"></div>
+                <p class="about__text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, alias aliquid beatae cupiditate eos
+                    error, eum explicabo fuga magnam magni nulla possimus, ratione rem sint sunt veritatis vitae. Sit,
+                    voluptates? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ad adipisci animi, beatae
+                    dignissimos error est eum excepturi illo illum ipsam itaque maiores maxime nostrum velit veritatis voluptas?
+                    Commodi, pariatur!
+                </p>
+            </div>
+            <div class="about__skills">
+                <div class="about__skills-item">
+                    <div class="about__skills-circle">
+                        <img src="icons/about_me/web_development.svg" alt="web-dev">
+                    </div>
+                    <div>
+                        <div class="title title_fz14">Web-разработка</div>
+                        <div class="about__skills-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </div>
+                    </div>
+                </div>
+                <div class="about__skills-item">
+                    <div class="about__skills-circle">
+                        <img src="icons/about_me/mobile_dev.svg" alt="app-dev">
+                    </div>
+                    <div>
+                        <div class="title title_fz14">Разработка приложений</div>
+                        <div class="about__skills-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </div>
+                    </div>
+                </div>
+                <div class="about__skills-item">
+                    <div class="about__skills-circle">
+                        <img src="icons/about_me/design.svg" alt="design">
+                    </div>
+                    <div>
+                        <div class="title title_fz14">Ux/Ui Design</div>
+                        <div class="about__skills-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--<section class="about">-->
+<!--    <div class="container">-->
+<!--        <div class="about__main">-->
+<!--            <img id="first" src="img/main_photo.jpg" alt="photo">-->
+<!--            <div id="second" class="about__side">-->
+<!--                <div class="title title_fz16 about__subtitle">Про меня</div>-->
+<!--                <h1 class="title title_fz36 about__title">Меня зовут Саиб</h1>-->
+<!--                <p class="about__descr">-->
+<!--                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad amet culpa deleniti deserunt,-->
+<!--                    doloremque eaque, eligendi error exercitationem illo laborum nihil nobis pariatur possimus quidem-->
+<!--                    quis quod reiciendis repellendus sunt.-->
+<!--                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium porro quam rem saepe-->
+<!--                    voluptates. Cupiditate ipsam libero maiores maxime repellendus sunt tempore voluptatem! Delectus-->
+<!--                    dicta id inventore quo recusandae, repellendus!-->
+<!--                </p>-->
+<!--            </div>-->
+<!--            <div id="third" class="about__ability">-->
+<!--                <div class="about__ability-item">-->
+<!--                    <img src="" alt="">-->
+<!--                    <div class="title title_fz14 about__subtitle">Web-разработка</div>-->
+<!--                    <p class="about__ability-item__descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit.-->
+<!--                        Accusantium cum dignissimos eius harum-->
+<!--                        ipsa nam neque odit officiis provident, quia quo quod rerum velit voluptas voluptate.-->
+<!--                    </p>-->
+<!--                </div>-->
+<!--                <div class="about__ability-item">-->
+<!--                    <img src="" alt="">-->
+<!--                    <div class="title title_fz14 about__subtitle">Разработка приложений</div>-->
+<!--                    <p class="about__ability-item__descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit.-->
+<!--                        Accusantium cum dignissimos eius harum-->
+<!--                        ipsa nam neque odit officiis provident, quia quo quod rerum velit voluptas voluptate.-->
+<!--                    </p>-->
+
+<!--                </div>-->
+<!--                <div class="about__ability-item">-->
+<!--                    <img src="" alt="">-->
+<!--                    <div class="title title_fz14 about__subtitle">UX/UI Design</div>-->
+<!--                    <p class="about__ability-item__descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit.-->
+<!--                        Accusantium cum dignissimos eius harum-->
+<!--                        ipsa nam neque odit officiis provident, quia quo quod rerum velit voluptas voluptate.-->
+<!--                    </p>-->
+
+<!--                </div>-->
+
+<!--            </div>-->
+<!--        </div>-->
+
+<!--    </div>-->
+<!--</section>-->
 
 
 <script src="js/script.js"></script>
