--- a/src/index.html
+++ b/src/index.html
@@ -162,7 +162,7 @@
     <div class="container">
         <div class="about__wrapper">
             <div class="about__photo">
-            <img src="img/Marshmello.jpeg" alt="photo">
+                <img src="img/Marshmello.jpeg" alt="photo">
             </div>
             <div class="about__descr">
                 <h2 class="title title_fz16 about__title">Про меня</h2>
@@ -172,8 +172,8 @@
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, alias aliquid beatae cupiditate eos
                     error, eum explicabo fuga magnam magni nulla possimus, ratione rem sint sunt veritatis vitae. Sit,
                     voluptates? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ad adipisci animi, beatae
-                    dignissimos error est eum excepturi illo illum ipsam itaque maiores maxime nostrum velit veritatis voluptas?
-                    Commodi, pariatur!
+                    dignissimos error est eum excepturi illo illum ipsam itaque maiores maxime nostrum velit veritatis
+                    voluptas? Commodi, pariatur!
                 </p>
             </div>
             <div class="about__skills">
@@ -215,56 +215,90 @@
     </div>
 </section>
 
-<!--<section class="about">-->
-<!--    <div class="container">-->
-<!--        <div class="about__main">-->
-<!--            <img id="first" src="img/main_photo.jpg" alt="photo">-->
-<!--            <div id="second" class="about__side">-->
-<!--                <div class="title title_fz16 about__subtitle">Про меня</div>-->
-<!--                <h1 class="title title_fz36 about__title">Меня зовут Саиб</h1>-->
-<!--                <p class="about__descr">-->
-<!--                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad amet culpa deleniti deserunt,-->
-<!--                    doloremque eaque, eligendi error exercitationem illo laborum nihil nobis pariatur possimus quidem-->
-<!--                    quis quod reiciendis repellendus sunt.-->
-<!--                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium porro quam rem saepe-->
-<!--                    voluptates. Cupiditate ipsam libero maiores maxime repellendus sunt tempore voluptatem! Delectus-->
-<!--                    dicta id inventore quo recusandae, repellendus!-->
-<!--                </p>-->
-<!--            </div>-->
-<!--            <div id="third" class="about__ability">-->
-<!--                <div class="about__ability-item">-->
-<!--                    <img src="" alt="">-->
-<!--                    <div class="title title_fz14 about__subtitle">Web-разработка</div>-->
-<!--                    <p class="about__ability-item__descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit.-->
-<!--                        Accusantium cum dignissimos eius harum-->
-<!--                        ipsa nam neque odit officiis provident, quia quo quod rerum velit voluptas voluptate.-->
-<!--                    </p>-->
-<!--                </div>-->
-<!--                <div class="about__ability-item">-->
-<!--                    <img src="" alt="">-->
-<!--                    <div class="title title_fz14 about__subtitle">Разработка приложений</div>-->
-<!--                    <p class="about__ability-item__descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit.-->
-<!--                        Accusantium cum dignissimos eius harum-->
-<!--                        ipsa nam neque odit officiis provident, quia quo quod rerum velit voluptas voluptate.-->
-<!--                    </p>-->
+<section class="resume">
+    <div class="container">
+        <h2 class="title title_fz16 resume__title">Опыт</h2>
+        <div class="title title_fz36 resume__subtitle">Чем я буду полезен</div>
+        <div class="divider"></div>
+        <div class="resume__wrapper">
+            <div class="resume__column">
+                <h3 class="title title_fz20 resume__column-title">Образование</h3>
+                <ul>
+                    <li>
+                        <div class="resume__item">
+                            <div class="resume__item-head">
+                                <div class="resume__item-icon">
+                                    <img src="icons/experience/university.svg" alt="university">
+                                </div>
+                                <h4 class="title title_fz14">КарГТУ</h4>
+                                <div class="resume__item-location">Диплом бакалавра | Караганда (2008-2012)</div>
+                            </div>
+                            <div class="resume__item-body">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut corporis cum
+                                cumque deserunt ea est iure laboriosam maxime nisi odio officia omnis, perferendis, quos
+                                repellendus reprehenderit soluta sunt voluptatum!
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="resume__item">
+                            <div class="resume__item-head">
+                                <div class="resume__item-icon">
+                                    <img src="icons/experience/courses.svg" alt="courses">
+                                </div>
+                                <h4 class="title title_fz14">Udemy</h4>
+                                <div class="resume__item-location">Курсы по Web-разработке </div>
+                            </div>
+                            <div class="resume__item-body">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut corporis cum
+                                cumque deserunt ea est iure laboriosam maxime nisi odio officia omnis, perferendis, quos
+                                repellendus reprehenderit soluta sunt voluptatum!
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="resume__column">
+                <h3 class="title title_fz20 resume__column-title">Опыт работы</h3>
+                <ul>
+                    <li>
+                        <div class="resume__item">
+                            <div class="resume__item-head">
+                                <div class="resume__item-icon">
+                                    <img src="icons/experience/developer.svg" alt="developer">
+                                </div>
+                                <h4 class="title title_fz14">Front-End Developer</h4>
+                                <div class="resume__item-location">EPAM | Караганда (2018-2019)</div>
+                            </div>
+                            <div class="resume__item-body">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut corporis cum
+                                cumque deserunt ea est iure laboriosam maxime nisi odio officia omnis, perferendis, quos
+                                repellendus reprehenderit soluta sunt voluptatum!
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="resume__item">
+                            <div class="resume__item-head">
+                                <div class="resume__item-icon">
+                                    <img src="icons/experience/designer.svg" alt="designer">
+                                </div>
+                                <h4 class="title title_fz14">UI/UX Designer</h4>
+                                <div class="resume__item-location">Squad Team | Караганда (2018) </div>
+                            </div>
+                            <div class="resume__item-body">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut corporis cum
+                                cumque deserunt ea est iure laboriosam maxime nisi odio officia omnis, perferendis, quos
+                                repellendus reprehenderit soluta sunt voluptatum!
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
-<!--                </div>-->
-<!--                <div class="about__ability-item">-->
-<!--                    <img src="" alt="">-->
-<!--                    <div class="title title_fz14 about__subtitle">UX/UI Design</div>-->
-<!--                    <p class="about__ability-item__descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit.-->
-<!--                        Accusantium cum dignissimos eius harum-->
-<!--                        ipsa nam neque odit officiis provident, quia quo quod rerum velit voluptas voluptate.-->
-<!--                    </p>-->
-
-<!--                </div>-->
-
-<!--            </div>-->
-<!--        </div>-->
-
-<!--    </div>-->
-<!--</section>-->
-
+    </div>
+</section>
 
 <script src="js/script.js"></script>
 </body>
