--- a/src/index.html
+++ b/src/index.html
@@ -247,7 +247,7 @@
                                     <img src="icons/experience/courses.svg" alt="courses">
                                 </div>
                                 <h4 class="title title_fz14">Udemy</h4>
-                                <div class="resume__item-location">Курсы по Web-разработке </div>
+                                <div class="resume__item-location">Курсы по Web-разработке</div>
                             </div>
                             <div class="resume__item-body">
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut corporis cum
@@ -284,7 +284,7 @@
                                     <img src="icons/experience/designer.svg" alt="designer">
                                 </div>
                                 <h4 class="title title_fz14">UI/UX Designer</h4>
-                                <div class="resume__item-location">Squad Team | Караганда (2018) </div>
+                                <div class="resume__item-location">Squad Team | Караганда (2018)</div>
                             </div>
                             <div class="resume__item-body">
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut corporis cum
@@ -299,6 +299,67 @@
 
     </div>
 </section>
+
+<section class="skill">
+    <div class="container">
+        <h2 class="title title_fz16 skill__title">Навыки</h2>
+        <div class="title title_fz36 skill__subtitle">Что я использую в работе</div>
+        <div class="divider"></div>
+        <div class="skill__block">
+            <div class="skill__item">
+                <img src="icons/skills/html5.svg" alt="html5" class="skill__item-icon">
+                <div class="skill__item-title title title_fz14">HTML5</div>
+                <div class="skill__item-descr">Именно он создает каркас вашего сайта или приложения, а пятая версия
+                    позволит мне создавать более SEO-оптимизированную структуру вашего продукта
+                </div>
+            </div>
+            <div class="skill__item">
+                <img src="icons/skills/css3.svg" alt="css3" class="skill__item-icon">
+                <div class="skill__item-title title title_fz14">CSS3</div>
+                <div class="skill__item-descr">Этот язык стилей позволяет мне создавать абсолютно любой внешний вид
+                    вашего сайта или приложения. Все ограничивается только вашей фантазией!
+                </div>
+            </div>
+            <div class="skill__item">
+                <img src="icons/skills/js.svg" alt="js" class="skill__item-icon">
+                <div class="skill__item-title title title_fz14">Java Script</div>
+                <div class="skill__item-descr">Этот язык программирования позволяет оживить все что угодно: слайдеры,
+                    окна, подсказки, вкладки, получение данных от сервера и многое другое
+                </div>
+            </div>
+            <div class="skill__item">
+                <img src="icons/skills/jquery.svg" alt="jquery" class="skill__item-icon">
+                <div class="skill__item-title title title_fz14">Jquery</div>
+                <div class="skill__item-descr">Библиотека Jquery позволит ускорить разработку. Без необходимости
+                    интегрировать в проект мы её не будем, но навык работы с ней присутствует
+                </div>
+            </div>
+            <div class="skill__item">
+                <img src="icons/skills/react.svg" alt="React" class="skill__item-icon">
+                <div class="skill__item-title title title_fz14">React</div>
+                <div class="skill__item-descr">Эта библиотека позволяет создавать web-приложения. Мы можем создать
+                    максимально интерактивный продукт именно под ваши цели
+                </div>
+            </div>
+            <div class="skill__item">
+                <img src="icons/skills/node.js.svg" alt="Node.js" class="skill__item-icon">
+                <div class="skill__item-title title title_fz14">Node.js</div>
+                <div class="skill__item-descr">Эта платформа позволяет создавать бэкенд для вашего продукта - “мозги”,
+                    которые будут выполнять действия, которые пользователь не видит
+                </div>
+            </div>
+            <div class="skill__item">
+                <img src="icons/skills/mongo.db.svg" alt="Mongo.db" class="skill__item-icon">
+                <div class="skill__item-title title title_fz14">Mongo.db</div>
+                <div class="skill__item-descr">Это нереляционная база данных, которая будет хранить данные вашего сайта
+                    или приложения
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+
 
 <script src="js/script.js"></script>
 </body>
