finished section skill

--- a/src/index.html
+++ b/src/index.html
@@ -356,6 +356,62 @@
                 </div>
             </div>
         </div>
+        <div class="progress__block">
+            <div class="progress__item">
+                <div class="progress__item-top">
+                    <div class="progress__item-name title title_fz14">Создание сайтов</div>
+                    <div class="progress__item-percent title_fz14">100%</div>
+                </div>
+                <div class="progress__item-scale">
+                    <div class="progress__item-scale-color" style="width: 100%"></div>
+                </div>
+            </div>
+            <div class="progress__item">
+                <div class="progress__item-top">
+                    <div class="progress__item-name title title_fz14">Создание приложений</div>
+                    <div class="progress__item-percent title_fz14">85%</div>
+                </div>
+                <div class="progress__item-scale">
+                    <div class="progress__item-scale-color" style="width: 85%"></div>
+                </div>
+            </div>
+            <div class="progress__item">
+                <div class="progress__item-top">
+                    <div class="progress__item-name title title_fz14">Работа с данными</div>
+                    <div class="progress__item-percent title_fz14">90%</div>
+                </div>
+                <div class="progress__item-scale">
+                    <div class="progress__item-scale-color" style="width: 90%"></div>
+                </div>
+            </div>
+            <div class="progress__item">
+                <div class="progress__item-top">
+                    <div class="progress__item-name title title_fz14">Креативность</div>
+                    <div class="progress__item-percent title_fz14">75%</div>
+                </div>
+                <div class="progress__item-scale">
+                    <div class="progress__item-scale-color" style="width: 75%"></div>
+                </div>
+            </div>
+            <div class="progress__item">
+                <div class="progress__item-top">
+                    <div class="progress__item-name title title_fz14">Создание дизайна</div>
+                    <div class="progress__item-percent title_fz14">90%</div>
+                </div>
+                <div class="progress__item-scale">
+                    <div class="progress__item-scale-color" style="width: 90%"></div>
+                </div>
+            </div>
+            <div class="progress__item">
+                <div class="progress__item-top">
+                    <div class="progress__item-name title title_fz14">Soft skills</div>
+                    <div class="progress__item-percent title_fz14">95%</div>
+                </div>
+                <div class="progress__item-scale">
+                    <div class="progress__item-scale-color" style="width: 95%"></div>
+                </div>
+            </div>
+        </div>
 
     </div>
 </section>
