added script fot show skills ratings

--- a/src/index.html
+++ b/src/index.html
@@ -363,7 +363,7 @@
                     <div class="progress__item-percent title_fz14">100%</div>
                 </div>
                 <div class="progress__item-scale">
-                    <div class="progress__item-scale-color" style="width: 100%"></div>
+                    <div class="progress__item-scale-color"></div>
                 </div>
             </div>
             <div class="progress__item">
@@ -372,7 +372,7 @@
                     <div class="progress__item-percent title_fz14">85%</div>
                 </div>
                 <div class="progress__item-scale">
-                    <div class="progress__item-scale-color" style="width: 85%"></div>
+                    <div class="progress__item-scale-color"></div>
                 </div>
             </div>
             <div class="progress__item">
@@ -381,7 +381,7 @@
                     <div class="progress__item-percent title_fz14">90%</div>
                 </div>
                 <div class="progress__item-scale">
-                    <div class="progress__item-scale-color" style="width: 90%"></div>
+                    <div class="progress__item-scale-color"></div>
                 </div>
             </div>
             <div class="progress__item">
@@ -390,7 +390,7 @@
                     <div class="progress__item-percent title_fz14">75%</div>
                 </div>
                 <div class="progress__item-scale">
-                    <div class="progress__item-scale-color" style="width: 75%"></div>
+                    <div class="progress__item-scale-color"></div>
                 </div>
             </div>
             <div class="progress__item">
@@ -399,7 +399,7 @@
                     <div class="progress__item-percent title_fz14">90%</div>
                 </div>
                 <div class="progress__item-scale">
-                    <div class="progress__item-scale-color" style="width: 90%"></div>
+                    <div class="progress__item-scale-color"></div>
                 </div>
             </div>
             <div class="progress__item">
@@ -408,7 +408,7 @@
                     <div class="progress__item-percent title_fz14">95%</div>
                 </div>
                 <div class="progress__item-scale">
-                    <div class="progress__item-scale-color" style="width: 95%"></div>
+                    <div class="progress__item-scale-color"></div>
                 </div>
             </div>
         </div>
