--- a/src/index.html
+++ b/src/index.html
@@ -217,8 +217,8 @@
 
 <section class="resume">
     <div class="container">
-        <h2 class="title title_fz16 resume__title">Опыт</h2>
-        <div class="title title_fz36 resume__subtitle">Чем я буду полезен</div>
+        <h2 class="title title_fz16 title_section-title">Опыт</h2>
+        <div class="title title_fz36 title_section-subtitle">Чем я буду полезен</div>
         <div class="divider"></div>
         <div class="resume__wrapper">
             <div class="resume__column">
@@ -302,8 +302,8 @@
 
 <section class="skill">
     <div class="container">
-        <h2 class="title title_fz16 skill__title">Навыки</h2>
-        <div class="title title_fz36 skill__subtitle">Что я использую в работе</div>
+        <h2 class="title title_fz16 title_section-title">Навыки</h2>
+        <div class="title title_fz36 title_section-subtitle">Что я использую в работе</div>
         <div class="divider"></div>
         <div class="skill__block">
             <div class="skill__item">
@@ -411,6 +411,35 @@
                     <div class="progress__item-scale-color"></div>
                 </div>
             </div>
+        </div>
+
+    </div>
+</section>
+
+<section class="portfolio">
+    <div class="container">
+        <h2 class="title title_fz16 title_section-title">Портфолио</h2>
+        <div class="title title_fz36 title_section-subtitle">Мои работы</div>
+        <div class="divider"></div>
+        <div class="portfolio__wrapper">
+            <a href="#" class="portfolio__item">
+                <img src="img/works/uber.jpg" alt="uber">
+            </a>
+            <a href="#" class="portfolio__item">
+                <img src="img/works/pulse.jpg" alt="pulse">
+            </a>
+            <a href="#" class="portfolio__item">
+                <img src="img/works/bread.jpg" alt="bread">
+            </a>
+            <a href="#" class="portfolio__item vertical">
+                <img src="img/works/plans.jpg" alt="plans">
+            </a>
+            <a href="#" class="portfolio__item">
+                <img src="img/works/ipad.jpg" alt="ipad">
+            </a>
+            <a href="#" class="portfolio__item horizontal">
+                <img src="img/works/mac.jpeg" alt="mac">
+            </a>
         </div>
 
     </div>
