--- a/src/index.html
+++ b/src/index.html
@@ -445,6 +445,60 @@
     </div>
 </section>
 
+<section class="price">
+    <div class="container">
+        <h2 class="title title_fz16 title_section-title">Прайс-лист</h2>
+        <div class="divider"></div>
+        <div class="price__wrapper">
+            <div class="price__item">
+                <div class="price__item-top">
+                    <div class="price__item-title title title_fz14">Landing-page</div>
+                    <div class="price__item-price title title_fz14">от 8000 руб.</div>
+                </div>
+                <div class="price__item-descr">Одностраничный сайт для презентации услуг/товаров/...</div>
+            </div>
+             <div class="price__item">
+                <div class="price__item-top">
+                    <div class="price__item-title title title_fz14">Web-приложение</div>
+                    <div class="price__item-price title title_fz14">от 28000 руб.</div>
+                </div>
+                <div class="price__item-descr">Приложение внутри браузера для лучшего комфорта</div>
+            </div>
+             <div class="price__item">
+                <div class="price__item-top">
+                    <div class="price__item-title title title_fz14">Корпоративный сайт</div>
+                    <div class="price__item-price title title_fz14">от 20000 руб.</div>
+                </div>
+                <div class="price__item-descr">Сайт для вашего бизнеса или компании</div>
+            </div>
+             <div class="price__item">
+                <div class="price__item-top">
+                    <div class="price__item-title title title_fz14">Android/IOS Приложение</div>
+                    <div class="price__item-price title title_fz14">от 25000 руб.</div>
+                </div>
+                <div class="price__item-descr">Приложение для смартфона любой ОС</div>
+            </div>
+             <div class="price__item">
+                <div class="price__item-top">
+                    <div class="price__item-title title title_fz14">Интернет-магазин</div>
+                    <div class="price__item-price title title_fz14">от 30000 руб.</div>
+                </div>
+                <div class="price__item-descr">Инструмент для ваших продаж в сети</div>
+            </div>
+             <div class="price__item">
+                <div class="price__item-top">
+                    <div class="price__item-title title title_fz14">Дизайн</div>
+                    <div class="price__item-price title title_fz14">Индивидуально</div>
+                </div>
+                <div class="price__item-descr">Создам дизайн для вашего сайта/приложения...</div>
+            </div>
+
+
+        </div>
+
+    </div>
+</section>
+
 
 <script src="js/script.js"></script>
 </body>
