--- a/src/index.html
+++ b/src/index.html
@@ -457,48 +457,95 @@
                 </div>
                 <div class="price__item-descr">Одностраничный сайт для презентации услуг/товаров/...</div>
             </div>
-             <div class="price__item">
+            <div class="price__item">
                 <div class="price__item-top">
                     <div class="price__item-title title title_fz14">Web-приложение</div>
                     <div class="price__item-price title title_fz14">от 28000 руб.</div>
                 </div>
                 <div class="price__item-descr">Приложение внутри браузера для лучшего комфорта</div>
             </div>
-             <div class="price__item">
+            <div class="price__item">
                 <div class="price__item-top">
                     <div class="price__item-title title title_fz14">Корпоративный сайт</div>
                     <div class="price__item-price title title_fz14">от 20000 руб.</div>
                 </div>
                 <div class="price__item-descr">Сайт для вашего бизнеса или компании</div>
             </div>
-             <div class="price__item">
+            <div class="price__item">
                 <div class="price__item-top">
                     <div class="price__item-title title title_fz14">Android/IOS Приложение</div>
                     <div class="price__item-price title title_fz14">от 25000 руб.</div>
                 </div>
                 <div class="price__item-descr">Приложение для смартфона любой ОС</div>
             </div>
-             <div class="price__item">
+            <div class="price__item">
                 <div class="price__item-top">
                     <div class="price__item-title title title_fz14">Интернет-магазин</div>
                     <div class="price__item-price title title_fz14">от 30000 руб.</div>
                 </div>
                 <div class="price__item-descr">Инструмент для ваших продаж в сети</div>
             </div>
-             <div class="price__item">
+            <div class="price__item">
                 <div class="price__item-top">
                     <div class="price__item-title title title_fz14">Дизайн</div>
                     <div class="price__item-price title title_fz14">Индивидуально</div>
                 </div>
                 <div class="price__item-descr">Создам дизайн для вашего сайта/приложения...</div>
             </div>
-
-
         </div>
 
     </div>
 </section>
 
+<section class="contacts">
+    <div class="container">
+        <div class="contacts__wrapper">
+            <div class="contacts__photo">
+                <img src="img/Marshmello.jpeg" alt="photo">
+            </div>
+            <div class="contacts__descr">
+                <h2 class="title title_fz16 contacts__title">Контакты</h2>
+                <div class="title title_fz36 contacts__subtitle">Свяжитесь со мной</div>
+                <div class="divider"></div>
+                <div class="title title_fz14 contacts__text">Любым удобным для вас способом:</div>
+                <div class="contacts__social">
+                    <a href="#" class="contacts__link">
+                        <img src="icons/social/social-normal/Facebook.svg" alt="facebook">
+                    </a>
+                    <a href="#" class="contacts__link">
+                        <img src="icons/social/social-normal/Telegram.svg" alt="telegram">
+                    </a>
+                    <a href="#" class="contacts__link">
+                        <img src="icons/social/social-normal/Instagram.svg" alt="Instagram">
+                    </a>
+                </div>
+                <div class="title title_fz14 contacts__text">Или оставьте ваши данные и я сам вам напишу:</div>
+                <form action="#" class="contacts__form">
+                    <div class="contacts__input">
+                        <input required name="name" id="name" type="text">
+                        <label for="name">Ваше имя</label>
+                    </div>
+                    <div class="contacts__input">
+                        <input required name="email" id="email" type="text">
+                        <label for="email">Ваша почта</label>
+                    </div>
+                    <div class="contacts__textarea">
+                        <textarea name="text" id="text"></textarea>
+                        <label for="text">Ваше сообщение</label>
+                    </div>
+                    <div class="contacts__triggers">
+                        <button class="btn contacts__btn">Отправить сообщение</button>
+                        <div class="contacts__policy">
+                            <input required type="checkbox">
+                            <span>Я согласен(а) с <a href="/policy.html">политикой конфиденциальности</a></span>
+                        </div>
+                    </div>
+                </form>
+
+            </div>
+        </div>
+    </div>
+</section>
 
 <script src="js/script.js"></script>
 </body>
